fixed sql syntax with phone number

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                                 </div>
                                 <div class="6u 12u(mobilep)">
                                     <label for="phone">Number</label>
-                                    <input class="text" type="text" name="email" id="email" value="" placeholder="98098045454" />
+                                    <input class="text" type="text" name="phone" id="phone" value="" placeholder="98098045454" />
                                 </div>
                                 <div class="6u 12u(mobilep)">
                                     <label for="school">School Name</label>
