--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
 							<div class="row">
 								<div class="6u 12u(mobilep)">
 									<label for="name">Name</label>
-									<input class="text" type="text" name="name" id="name" value="" placeholder="John Doe" />
+									<input class="text" type="text" name="name" id="name" value="" placeholder="" />
 								</div>
 								<div class="6u 12u(mobilep)">
 									<label for="email">Email</label>
-									<input class="text" type="email" name="email" id="email" value="" placeholder="johndoe@domain.tld" />
+									<input class="text" type="email" name="email" id="email" value="" placeholder="" />
 								</div>
                                 <div class="6u 12u(mobilep)">
                                     <label for="password">Password</label>
@@ -97,27 +97,27 @@
                                 </div>
                                 <div class="6u 12u(mobilep)">
                                     <label for="phone">Date of birth</label>
-                                    <input class="text" type="date"  name="dob" id="dob" value="" placeholder="12/05/1994" />
+                                    <input class="text" type="date"  name="dob" id="dob" value="" placeholder="" />
                                 </div>
                                 <div class="6u 12u(mobilep)">
                                     <label for="phone">Number</label>
-                                    <input class="text" type="text" name="phone" id="phone" value="" placeholder="98098045454" />
+                                    <input class="text" type="text" name="phone" id="phone" value="" placeholder="" />
                                 </div>
                                 <div class="6u 12u(mobilep)">
                                     <label for="school">School Name</label>
-                                    <input class="text" type="text" name="school" id="school" value="" placeholder="Amrita Vidyalayam, Calicut" />
+                                    <input class="text" type="text" name="school" id="school" value="" placeholder="" />
                                 </div>
                                 <div class="6u 12u(mobilep)">
                                     <label for="city">City</label>
-                                    <input class="text" type="text" name="city" id="city" value="" placeholder="Kannur" />
+                                    <input class="text" type="text" name="city" id="city" value="" placeholder="" />
                                 </div>
                                 <div class="6u 12u(mobilep)">
                                     <label for="address">Address</label>
-                                    <textarea class="text" type="text" name="address" id="address" value="" placeholder="My address"  size="150"></textarea>
+                                    <textarea class="text" type="text" name="address" id="address" value="" placeholder=""  size="150"></textarea>
                                 </div>
                                 <div class="6u 12u(mobilep)">
                                     <label for="address">Postal Address</label>
-                                    <textarea class="text" type="text" name="paddress" id="paddress" value="" placeholder="My postal address"  size="150"></textarea>
+                                    <textarea class="text" type="text" name="paddress" id="paddress" value="" placeholder=""  size="150"></textarea>
                                 </div>
                                 <div class="6u 12u(mobilep)">
                                     <label>Current standard</label>
@@ -137,15 +137,15 @@
 
                                 <div class="12u">
                                     <label for="subject">Have you taken part in Math or any science olympiad ? </label>
-                                    <textarea name="olympiad" id="message" placeholder="Enter your response" rows="6"></textarea>
+                                    <textarea name="olympiad" id="message" placeholder="" rows="6"></textarea>
                                 </div>
                                 <div class="12u">
                                     <label for="subject">What is your ambition ?</label>
-                                    <textarea name="ambition" id="message" placeholder="Enter your ambition" rows="6"></textarea>
+                                    <textarea name="ambition" id="message" placeholder="" rows="6"></textarea>
                                 </div>
                                 <div class="12u">
                                     <label for="subject">Are you interested in cyber security and why ?</label>
-                                    <textarea name="interest" id="message" placeholder="Enter your response" rows="6"></textarea>
+                                    <textarea name="interest" id="message" placeholder="" rows="6"></textarea>
                                 </div>
 
 							</div>
