added background image

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 				<p>An initiative by the Amrita Center for cyber security to enhance security know-how of school students</p>.
                 <br>
                 <a href="#register" class="button">Register Now</a>
+                
 			</div>
 
 		<!-- Main -->
@@ -59,14 +60,14 @@
 						<a href="#" class="image icon fa-code"><img src="images/pic02.jpg" alt="" /></a>
 						<div class="content">
 							<h3>Hack</h3>
-							<p>Hack anything under the sun</p>
+							<p>Take part in the hacking contest, conducted based on the knowledge acquired.</p>
 						</div>
 					</section>
 					<section class="feature left">
 						<a href="#" class="image icon fa-mobile"><img src="images/pic03.jpg" alt="" /></a>
 						<div class="content">
-							<h3>Share</h3>
-							<p>Share your skills, earn the grace</p>
+							<h3>Win</h3>
+							<p>Win Exciting prizes!</p>
 						</div>
 					</section>
 				</div>
@@ -100,7 +101,7 @@
                                     <input class="text" type="date"  name="dob" id="dob" value="" placeholder="" />
                                 </div>
                                 <div class="6u 12u(mobilep)">
-                                    <label for="phone">Number</label>
+                                    <label for="phone">Phone Number</label>
                                     <input class="text" type="text" name="phone" id="phone" value="" placeholder="" />
                                 </div>
                                 <div class="6u 12u(mobilep)">
@@ -112,11 +113,11 @@
                                     <input class="text" type="text" name="city" id="city" value="" placeholder="" />
                                 </div>
                                 <div class="6u 12u(mobilep)">
-                                    <label for="address">Address</label>
+                                    <label for="address">School Postal Address</label>
                                     <textarea class="text" type="text" name="address" id="address" value="" placeholder=""  size="150"></textarea>
                                 </div>
                                 <div class="6u 12u(mobilep)">
-                                    <label for="address">Postal Address</label>
+                                    <label for="address">Home Postal Address</label>
                                     <textarea class="text" type="text" name="paddress" id="paddress" value="" placeholder=""  size="150"></textarea>
                                 </div>
                                 <div class="6u 12u(mobilep)">
@@ -146,6 +147,10 @@
                                 <div class="12u">
                                     <label for="subject">Are you interested in cyber security and why ?</label>
                                     <textarea name="interest" id="message" placeholder="" rows="6"></textarea>
+                                </div>
+                             <div class="12u">
+                                    <label for="school">Do you have a blog ? ( If yes, the address )</label>
+                                    <textarea class="text" type="text" name="blog" id="b" value="" rows="1" placeholder=""></textarea>
                                 </div>
 
 							</div>
