fixed minor fonts issues

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 		<!-- Header -->
 			<div id="header">
 				<span class="logo icon fa-code-fork"></span>
-				<h1>Learn to hack with <br>CyberGurukulam</h1>
-				<p>An initiative by the Amrita Center for cyber security to enhance security know-how of school students</p>.
+				<h1>Learn to hack with <br>Cyber Gurukulam</h1>
+				<h2 style="color: #ffffff; font-weight: bold">An initiative by Amrita Center for Cyber Security</h2>.
                 <br>
                 <a href="#register" class="button">Register Now</a>
                 
