Fixed redirection on success/fail

--- a/php/failure.html
+++ b/php/failure.html
@@ -2,7 +2,7 @@
 <head> </head>
 <script>
     alert( "We couldnt register you :( Please try again" );
-    window.location = "http://103.10.24.98/index.html";
+    window.location = "/../index.html";
 </script>
 
 </html>
