--- a/php/success.html
+++ b/php/success.html
@@ -2,7 +2,7 @@
 <head> </head>
 <script>
     alert( "Success! You are registered!" );
-    window.location = "http://103.10.24.98/index.html";
+    window.location = "/../index.html";
 </script>
 
 </html>
