--- a/index.html
+++ b/index.html
@@ -20,12 +20,17 @@
 			<link rel="stylesheet" href="css/style-wide.css" />
 		</noscript>
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
+        <style>
+            #keyinfo {
+                text-align: center;
+            }
+
+        </style>
 	</head>
 	<body>
 
 		<!-- Header -->
 			<div id="header">
-				<span class="logo icon fa-code-fork"></span>
 				<h1>Learn to hack with <br>Cyber Gurukulam</h1>
 				<h2 style="color: #ffffff; font-weight: bold">An initiative by Amrita Center for Cyber Security</h2>.
                 <br>
@@ -36,16 +41,24 @@
 		<!-- Main -->
 			<div id="main">
 
-				<header class="major container 75%">
-					<h2>We conduct experiments that
-					<br />
-					may or may not seriously
-					<br />
-					break the universe</h2>
-					<!--
-					<p>Tellus erat mauris ipsum fermentum<br />
-					etiam vivamus nunc nibh morbi.</p>
-					-->
+				<header class="major container 75%" style="text-align: left">
+                        <strong><span id="keyinfo"><center>KEY INFORMATION</center></span></strong><br>
+                       <strong> ONLINE EXAM</strong>  <br>
+                    Date: 11 April 2015 - 9 am to 12 pm <br>
+                    Syllabus : Maths, Aptitude,  Programming basics ( If you haven't learnt programming, we will still consider based on aptitude and maths :) )<br>
+                    <br>
+                    <strong> MAIN CAMP</strong> <br>
+                    Date : 17 - 22 April 2015 <br>
+                    Syllabus : Programming,
+                    Application Security,
+                    Web Security,
+                    Network Security,
+                    Cryptography,
+                    Forensics,
+                    Penetration Testing <br>
+
+                        Venue : Amrita University, Amritapuri Campus <br>
+
 				</header>
 
 				<div class="box alt container">
@@ -53,7 +66,13 @@
 						<a href="#" class="image icon fa-signal"><img src="images/pic01.jpg" alt="" /></a>
 						<div class="content">
 							<h3>Learn</h3>
-							<p>Learn from experts, and understand the true potential in you</p>
+							<p>Programming <br>
+                               Application Security <br>
+                                Web Security<br>
+                                Network Security<br>
+                                Cryptography<br>
+                                Forensics<br>
+                                Penetration Testing</p>
 						</div>
 					</section>
 					<section class="feature right">
@@ -122,9 +141,9 @@
                                 <div class="6u 12u(mobilep)">
                                 <ul>
                                     <label for="marks">Previous year academic performance</label>
-                                    <li><label> Computer Science: </label><input id="cs" name="computerscience"  type="number"  value=""/></li>
-                                    <li><label> Physics: </label><input id="phy" name="physics" type="number" value=""/></li>
-                                    <li><label> Maths:</label> <input id="maths" name="math"  type="number" value=""/></li>
+                                    <li><label> Maths:</label> <input id="maths" name="math"  type="text" value=""/></li>
+                                    <li><label> Physics/Science: </label><input id="phy" name="physics" type="text" value=""/></li>
+                                    <li><label> Computer Science: <br>( If applicaable, else enter 0 ) </label><input id="cs" name="computerscience"  type="text"  value=""/></li>
                                 </ul>
                                 </div>
 
