--- a/index.html
+++ b/index.html
@@ -57,7 +57,12 @@
                     Forensics,
                     Penetration Testing <br>
 
-                        Venue : Amrita University, Amritapuri Campus <br>
+                        Venue : Amrita University, Amritapuri Campus <br><br>
+
+                    <strong>WHO IS ELIGIBLE </strong><br>
+                    Students currently enrolled in 8 - 11th standard* in any <strong>Kerala School</strong>.<br>
+                    * as on February 2015
+
 
 				</header>
 
