fixed php issues, made stable

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         Venue : Amrita University, Amritapuri Campus <br><br>
 
                     <strong>WHO IS ELIGIBLE </strong><br>
-                    Students currently enrolled in 8 - 11th standard* in any <strong>Kerala School</strong>.<br>
+                    Students currently enrolled in 8 - 11th standard* in any <strong>SCHOOL LOCATED IN KERALA</strong>.<br>
                     * as on February 2015
 
 
@@ -165,8 +165,8 @@
                                     <textarea name="interest" id="message" placeholder="" rows="6"></textarea>
                                 </div>
                              <div class="12u">
-                                    <label for="school">Do you have a blog ? ( If yes, the address )</label>
-                                    <textarea class="text" type="text" name="blog" id="b" value="" rows="1" placeholder=""></textarea>
+                                    <label for="blog">Do you have a blog ? ( If yes, the address )</label>
+                                    <textarea class="text" type="text" name="blog" id="blog" value="" rows="1" placeholder=""></textarea>
                                 </div>
 
 							</div>
