Social Network links Updated [twitter yet to add]

--- a/index.html
+++ b/index.html
@@ -218,10 +218,8 @@
 
 					<ul class="icons">
 						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
+						<li><a href="https://www.facebook.com/cybergurukulam" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+						<li><a href="https://github.com/amfoss" class="icon fa-github"><span class="label">Github</span></a></li>
 					</ul>
 
 					<ul class="copyright">
