changed contact us for index.html

--- a/index.html
+++ b/index.html
@@ -164,38 +164,21 @@
 
 			</div>
 
-		<!-- Footer -->
-			<div id="footer">
+		<!-- Footer updated with e-mail ID and the send mail is now manual-->
+		<div id="footer">
 				<div class="container 75%">
 
 					<header class="major last">
-						<h2>Questions or comments?</h2>
+						<h2>You have some questions! email us @</h2>
 					</header>
-
-					<p>Please leave your message</p>
-
-					<form method="post" action="#">
-						<div class="row">
-							<div class="6u 12u(mobilep)">
-								<input type="text" name="name" placeholder="Name" />
-							</div>
-							<div class="6u 12u(mobilep)">
-								<input type="email" name="email" placeholder="Email" />
+					
+					<div class="row">
+							<div class="12u" >
+							  <p>
+								cybergurukulam@gmail.com
+							  </p>
 							</div>
 						</div>
-						<div class="row">
-							<div class="12u">
-								<textarea name="message" placeholder="Message" rows="6"></textarea>
-							</div>
-						</div>
-						<div class="row">
-							<div class="12u">
-								<ul class="actions">
-									<li> <input type="submit" value="Send Message" /></li>
-								</ul>
-							</div>
-						</div>
-					</form>
 
 					<ul class="icons">
 						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
