--- a/php/failure.html
+++ b/php/failure.html
@@ -1,7 +1,7 @@
 <html>
 <head> </head>
 <script>
-    alert( "We couldnt register you :( Please try again" );
+    alert( "Sorry! We couldn't do that :( Please try again" );
     window.location = "/../index.html";
 </script>
 
