--- a/php/success.html
+++ b/php/success.html
@@ -1,7 +1,7 @@
 <html>
 <head> </head>
 <script>
-    alert( "Success! You are registered!" );
+    alert( "Success! Requested action done!" );
     window.location = "/../index.html";
 </script>
 
