changed logo, minor design changes

--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
 				<h1>Learn to hack with <br>Cyber Gurukulam</h1>
 				<h2 style="color: #ffffff; font-weight: bold">An initiative by Amrita Center for Cyber Security</h2>.
                 <br>
-                <a href="#register" class="button">Register Now</a>
+                <a href="#register" class="button">Register Now</a>  &nbsp
+                <a href="#contact" class="button">Contact Us</a>
                 
 			</div>
 
@@ -59,28 +60,13 @@
 			<div id="main">
 
 				<header class="major container 75%" style="text-align: left">
-                        <strong><span id="keyinfo"><center>KEY INFORMATION</center></span></strong><br>
-                       <strong> ONLINE EXAM</strong>  <br>
-                    Date: 11 April 2015 - 9 am to 12 pm <br>
-                    Syllabus : Maths, Aptitude,  Programming basics ( If you haven't learnt programming, we will still consider based on aptitude and maths :) )<br>
+                    <h2>THE TRAINING IS EXCLUSIVELY FOR VIII TO XI STUDENTS* REGISTERED IN KERALA SCHOOLS</h2>
+                    <center>
+                    <a href="#faq" class="button">FAQ</a> &nbsp
+                    <a href="#schedule" class="button">Schedule</a>
+                    </center>
                     <br>
-                    <strong> MAIN CAMP</strong> <br>
-                    Date : 17 - 22 April 2015 <br>
-                    Syllabus : Programming,
-                    Application Security,
-                    Web Security,
-                    Network Security,
-                    Cryptography,
-                    Forensics,
-                    Penetration Testing <br>
-
-                        Venue : Amrita University, Amritapuri Campus <br><br>
-
-                    <strong>WHO IS ELIGIBLE </strong><br>
-                    Students currently enrolled in 8 - 11th standard* in any <strong>SCHOOL LOCATED IN KERALA</strong>.<br>
-                    * as on February 2015
-
-
+                    <h1 style="text-align: left"><i>* as on February 2015</i></h1>
 				</header>
 
 				<div class="box alt container">
@@ -105,18 +91,75 @@
 						</div>
 					</section>
 					<section class="feature left">
-						<a href="#" class="image icon fa-mobile"><img src="images/pic03.jpg" alt="" /></a>
+						<a href="#" class="image icon fa-trophy"><img src="images/pic03.jpg" alt="" /></a>
 						<div class="content">
 							<h3>Win</h3>
-							<p>Win Exciting prizes!</p>
+							<p>Scholarship to attend the event <br>
+                            Exciting prizes for various hacking competitions</p>
 						</div>
 					</section>
 				</div>
 
+                <div class="box container" id="schedule">
+                    <h3>SCHEDULE</h3>
+                    <section>
+                        <header>
+                            <h1>Online Exam</h1>
+                        </header>
+                        <div class="table-wrapper">
+                            <table class="default">
+                                <thead>
+                                <tr>
+                                    <th>Date</th>
+                                    <th>Time</th>
+                                    <th>Syllabus</th>
+                                    <th>Venue</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr>
+                                    <td>11 April 2015</td>
+                                    <td>9am - 12pm</td>
+                                    <td>Maths, Aptitude, Programming basics <br>( If you haven't learnt programming, we will still consider based on aptitude and maths :) )</td>
+                                    <td>www.codechef.com</td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
+
+                    </section>
+
+
+                    <section>
+                        <header>
+                            <h1>Main Camp</h1>
+                        </header>
+                        <div class="table-wrapper">
+                            <table class="default">
+                                <thead>
+                                <tr>
+                                    <th>Date</th>
+                                    <th>Syllabus</th>
+                                    <th>Venue</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr>
+                                    <td>17 - 22 April 2015</td>
+                                    <td>Programming, Application Security, Web Security, Network Security, Cryptography, Forensics, Penetration Testing </td>
+                                    <td>Amrita University, Amritapuri Campus </td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
+
+                    </section>
+                </div>
+
 
 				<div class="box container">
                     <section>
-                        <header>
+                        <header id="faq">
                             <h3>FAQ'S</h3>
                         </header>
                         1) Can the candidates use - existing codechef account?
@@ -131,9 +174,12 @@
                         3) People who are in 7 th standard going to 8 can the apply?
                         <blockquote> NO </blockquote>
                     </section>
+
+                    </div>
+                <div class="container box">
 					<section>
 						<header id="register">
-							<h3>REGISTER NOW FOR CYBERGURUKULAM</h3>
+							<h3>REGISTER NOW</h3>
 						</header>
 						<form method="post" action="php/register.php">
 							<div class="row">
@@ -225,7 +271,7 @@
 
 		<!-- Footer updated with e-mail ID and the send mail is now manual-->
 		<div id="footer">
-				<div class="container 75%">
+            <div id ="contact" class="container 75%">
 
 					<header class="major last">
 						<h2>Question or Comments ?</h2>
