--- a/index.html
+++ b/index.html
@@ -24,24 +24,29 @@
             #keyinfo {
                 text-align: center;
             }
-	</style>
+	    </style>
 
-	<script>
-	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+        <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-	  ga('create', 'UA-42366838-3', 'auto');
-	  ga('send', 'pageview');
-
-	</script>
+        ga('create', 'UA-42366838-3', 'auto');
+        ga('send', 'pageview')
+        </script>
         <script src="//www.google.com/recaptcha/api.js?onload=CaptchaCallback&render=explicit" async defer></script>
         <script type="text/javascript">
-            var CaptchaCallback = function(){
-                grecaptcha.render('RecaptchaField1', {'sitekey' : '6LcfOAQTAAAAAMulh0UTBQczBLN6lLT-FtUz2_TY'});
-                grecaptcha.render('RecaptchaField2', {'sitekey' : '6LcfOAQTAAAAAMulh0UTBQczBLN6lLT-FtUz2_TY'});
-            };
+        var CaptchaCallback = function(){
+        grecaptcha.render('RecaptchaField1', {'sitekey' : '6LcfOAQTAAAAAMulh0UTBQczBLN6lLT-FtUz2_TY'});
+        grecaptcha.render('RecaptchaField2', {'sitekey' : '6LcfOAQTAAAAAMulh0UTBQczBLN6lLT-FtUz2_TY'});
+        };
+        </script>
+        <script src="js/smooth-scroll.js"></script>
+        <script>
+            smoothScroll.init({
+                speed: 1000
+            } );
         </script>
 	</head>
 	<body>
@@ -51,8 +56,8 @@
 				<h1>Learn to hack with <br>Cyber Gurukulam</h1>
 				<h2 style="color: #ffffff; font-weight: bold">An initiative by Amrita Center for Cyber Security</h2>.
                 <br>
-                <a href="#register" class="button">Register Now</a>  &nbsp
-                <a href="#contact" class="button">Contact Us</a>
+                <a data-scroll href="#register" class="button">Register Now</a>  &nbsp
+                <a data-scroll href="#contact" class="button">Contact Us</a>
                 
 			</div>
 
@@ -62,8 +67,8 @@
 				<header class="major container 75%" style="text-align: left">
                     <h2>THE TRAINING IS EXCLUSIVELY FOR VIII TO XI STUDENTS* REGISTERED IN KERALA SCHOOLS</h2>
                     <center>
-                    <a href="#faq" class="button">FAQ</a> &nbsp
-                    <a href="#schedule" class="button">Schedule</a>
+                    <a data-scroll href="#faq" class="button">FAQ</a> &nbsp
+                    <a data-scroll href="#schedule" class="button">Schedule</a>
                     </center>
                     <br>
                     <h1 style="text-align: left"><i>* as on February 2015</i></h1>
