--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                                 </thead>
                                 <tbody>
                                 <tr>
-                                    <td>17 - 22 April 2015</td>
+                                    <td>Week- 1 May 2015</td>
                                     <td>Programming, Application Security, Web Security, Network Security, Cryptography, Forensics, Penetration Testing </td>
                                     <td>Amrita University, Amritapuri Campus </td>
                                 </tr>
@@ -176,7 +176,7 @@
                         </header>
                         1) Can the candidates use - existing codechef account?
                         <blockquote> Yes, They can use the existing ‘codechef ID’.
-                            But before attemoting the test with the ID, make sure you communicate the ID to the CyberGurukulam Team.
+                            But before attempting the test with the ID, make sure you communicate the ID to the CyberGurukulam Team.
                             So that the test is enabled for your ID.
                         </blockquote>
                         2) Will they represent their schools or are on their own?
